# proc-macro-workshop

./: .gitignore  Cargo.toml  main.rs
builder/: Cargo.toml
builder/src/: lib.rs
scratch/: Cargo.toml
scratch/src/: lib.rs
scratch/tests/: a.rs  index.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 03-expand-four-errors.rs
