[package]
name = "seq"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.14"
syn = { version="1.0.85", features=["extra-traits", "printing", "full"]}
